src/objects/Contact_Roles__c.object
<CustomObject>
    <description>R5 - Contact Roles</description>
    <fields>
        <fullName>ABB_Perspective_Role__c</fullName>
        <description>R5 - ABB Perspective Role</description>
        <label>Role from ABB Perspective</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>R5 Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Capture_Team_Role__c</fullName>
        <description>R5-Capture Team Role</description>
        <label>Capture Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Capture Team Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front-End-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capture Team Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance, Tax Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tender Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>R5 - Adding additional comments about the customer contacts</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>R5 - Contact Name</description>
        <formula>Contact__r.FirstName  &amp;  Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>R5 - Master-Detail to Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>R5 - Role</description>
        <label>Player Map Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pen Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Contact_Check__c</fullName>
        <description>R5 - Unique Contact Check</description>
        <label>Unique Contact Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Contact Role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Plan__c</columns>
        <columns>Contact__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Account-CNT-ROLE-{0000}</displayFormat>
        <label>Contact Roles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Role_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R5 - If Account Plan Status is Closed, then the user should not edit the Account Plan Contact Role.</description>
        <errorConditionFormula>ISPICKVAL(Account_Plan__r.Status__c, &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Account Plan is Closed</errorMessage>
    </validationRules>
</CustomObject>